# dataplane-python-package

./: .gitignore  LICENSE  README.md  filename  import_test.py  import_try.py  notes-distribute.md  pyproject.toml  update_toml_release.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  requirements.txt
.github/workflows/: python-release.yaml  python-tests.yaml
src/dataplane/: __init__.py  hello.py  pipelinerun.py
src/dataplane/DataStorage/Hydra/: hydra_download.py  hydra_upload.py  test_hydra.py  test_hydra_object.py
src/dataplane/DataStorage/s3/: s3_download.py  s3_upload.py  test_s3.py  test_s3_nonroot.py  test_s3_object.py
src/dataplane/Microsoft/Sharepoint/: sharepoint_download.py  sharepoint_upload.py  test_sharepoint.py  test_sharepoint_nonroot.py  test_sharepoint_object.py
src/dataplane/Microsoft/Teams/: test_webhook_send.py  webhook_send.py
src/dataplane/data_storage/sharepoint/: sharepoint_upload.py  test_sharepoint_upload.py
src/dataplane/pipelinerun/data_persist/: pandas_redis_store.py  pandas_s3_store.py  redis_store.py  s3_store.py  test_pandas_redis.py  test_redis.py  test_s3_store.py
tests/: docker-compose.yaml  requirements.txt
